2006-05-29  Michael Ritzert  <ritzert@t-online.de>

	* term/Makefile.am.in: Look for the postscript files to be installed
	relative to $(srcdir).

2006-05-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c (clip_point): The code comments incorrectly described
	the bit values returned by clip_point().  

2006-05-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  Treat LT_AXIS linetype as dotted even if the
	terminal is 'set term x11 solid'.  Do not try to set dash type or
	linewidth for LT_BACKGROUND because this will underflow the type arrays.
	Bugfix.

	* share/Gnuplot.app-defaults:  Comment out settings for *ctrlq *raise
	and *background so that the default remains the same as having no
	app-defaults file.

2006-02-23  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* term/wxt.trm (TERM_HELP): Fix typos, thanks to Shigeharu Takeno.

2006-05-22  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* term/vgagl.trm (VGAGL_init_keytable): Fix bug #1492341 by
	replacing sizeof() on an array of int (which gives an overflow
	by writing four times more than the size of the array) by the 
	actual size of the array (KEYTABLE_SIZE).
	(VGAGL_truecolor): Declare as a TBOOLEAN instead of an integer,
	do not use the enums yes and no but TRUE and FALSE.
	(VGAGL_processing_graphics_events): Likewise.
	(VGAGL_interpolate): Likewise.
	(VGAGL_cursor_drawn): Likewise.
	(VGAGL_need_update): Likewise.
	(VGAGL_graphics_on): Likewise.

2006-05-22  Lars Hecking  <lhecking@users.sourceforge.net>

	* configure.in: Reformat and bugfix wxwidgets section.

	* docs/gnuplot.texi: Regenerated.

	* share/Makefile.am: Add EXTRA_DIST.

	* src/Makefile.am: Add wxterminal to EXTRA_DIST.

	* src/makefile.all, src/makefile.awc: Regenerated.

	* src/wxterminal/wxt_gui.cpp: Fix typos.

	* term/estimate.trm: Add cvs Id.

2006-05-21  Daniel Sebald  <daniel.sebald@ieee.org>

	* demo/random.dem: Examples to illustrate generating normal random